Updated Competition Purpose and Problem Statement

--- a/02_Introduction/02002_Problem_Statement.tex
+++ b/02_Introduction/02002_Problem_Statement.tex
@@ -14,7 +14,11 @@
 \begin{document}
 	\subsection{Problem Statement}
 	\label{subsec:problem_statement}
-	The robot must be capable of mining and depositing a minimum of 1 kg of icy simulant in a collector bin within 10 minutes. The mining area consists of a 7.38 meter by 3.88 meter container with three zones: the starting zone, obstacle zone, and mining zone. The robot begins the competition run in the starting zone in an unknown orientation. It must traverse the obstacle zone, mine gravel from the mining zone, and return it to the collector bin in the starting zone. The performance of the robot is measured using a point system. Points are awarded and deducted based on the amount of collected gravel as well as design parameters such as the mass of the robot, energy consumption, communication bandwidth utilization, and dust-free operation.
+	The robot must be capable of mining and depositing a minimum of 1 kg of icy regolith simulant in a collector bin within 10 minutes. The mining area consists of a 7.38 meter by 3.88 meter container with three zones: the starting zone, obstacle zone, and mining zone. The robot must begin in the starting zone with an unknown orientation and traverse the obstacle zone, mine gravel from the mining zone, and return it to the collector bin. Performance of the robot is quantified using a point system. Points are awarded and deducted based on the amount of collected gravel as well as design parameters including  the mass of the robot, energy consumption, communication bandwidth utilization, level of autonomy, and dust-free operation.
+	
+	
+	To simulate the limitations in the Mars environment, the robot must also adhere to certain operating limitations. The robot cannot use sound ranging systems, barometers, magnetometers, GPS, hydraulics, foam cells, or foam-filled tires, as these technologies do not work in the Martian environment. This constraint necessitates researching novel solutions to challenges which already have well-established solutions on Earth.
+
 
 	
 \end{document}
