Added more sections to the paper.

--- a/00_Preamble/frr_preamble.sty
+++ b/00_Preamble/frr_preamble.sty
@@ -1,6 +1,7 @@
 \ProvidesPackage{frr_preamble}
 
 \usepackage[subpreambles=true]{standalone}
+\usepackage{indentfirst}
 \usepackage[letterpaper,margin=1in]{geometry}
 \usepackage{graphics}
 \usepackage{graphicx}
