--- a/02_Introduction/02001_Competition_Purpose.tex
+++ b/02_Introduction/02001_Competition_Purpose.tex
@@ -16,11 +16,7 @@
 	\label{subsec:competition_purpose}
 	
 	
-As aerospace industry leaders such as NASA and SpaceX invest in developing technologies for missions to Mars, manned Martian exploration is now on the horizon. The ability to collect and utilize resources in-situ during these missions will significantly reduce payload cost and creates the opportunity to extend the duration of missions. With the discovery of ice and hydrated minerals in the Martian regolith, excavation of the regolith is of paramount importance to collect water for consumption, hygiene, farming, and more.
-
-
-The NASA Robotics Mining Competition (RMC) was established to promote the development of concepts for Martian regolith excavation robots. Each team is tasked with designing, building, and testing a robotic excavation system in a simulated Martian environment. The RMC also requires that teams support their local communities by performing outreach events to promote interest in science, technology, engineering, and mathematics.
-
+As the Earth's population increases and its natural resources deplete, it is essential that the world looks to the solar system for its surplus of natural resources. The aerospace industry has made huge strides towards interplanetary travel, and Mars colonization missions are now on the horizon. It is not feasible to frequently supply natural resources from Earth due to launch costs and the lead time on interplanetary travel. With the recent discovery of hydrated minerals in the Martian regolith, it is clear that In-Situ Resource Utilization (ISRU) would be essential to the development of a sustainable Mars civilization. Therefore, it is necessary to develop autonomous robotics for efficient water collection on Mars. The NASA Robotic Mining Competition (RMC) was established to promote the development of Mars excavation rovers and inspire the future generation of engineers to pursue ISRU technologies. Each team is tasked with designing, building, and testing a robotic excavation system in a simulated Martian environment. 
 	
 	
 	
