Updated cover pages and changed margins

--- a/00_Title_Page/00000_FRR_Title_Page.tex
+++ b/00_Title_Page/00000_FRR_Title_Page.tex
@@ -23,11 +23,11 @@
 
 \HRule \\[0.4cm]
 \centering{
-	\Large\textsc{The Swapbot 2.0: Systems Engineering Report}
+	\Large\textsc{Vanderbilt University Robotics \\ Systems Engineering Report}
 
-\HRule\\ [1.5cm]
+\HRule\\ [1.0cm]
 
-\vspace*{0.25in}
+\vspace*{0.1in}
 \huge\textsc{NASA Robotics Mining Competition}
 
 \vspace*{0.125in}
@@ -36,7 +36,16 @@
 
 \vspace*{0.5in}
 
-\large{\textsc{March 7, 2018}}
+\large{\textsc{April 10, 2018}}
+
+\vspace*{0.3in}
+
+\begin{center}
+\rule{4.5in}{0.4pt}
+\end{center}
+\begin{center}
+Dr. Nabil Simaan: Faculty Advisor
+\end{center}
 
 \begin{tikzpicture}[remember picture,overlay]
    \node[anchor=north east,inner sep=0pt] at (current page.north east)
