--- a/03_Systems_Engineering/03000_Systems_Engineering.tex
+++ b/03_Systems_Engineering/03000_Systems_Engineering.tex
@@ -15,6 +15,10 @@
 \begin{document}
 	\section{Systems Engineering} 
 		\input{03_Systems_Engineering/03001_Concept_Development.tex}
+		\input{03_Systems_Engineering/03002_Preliminary_Design.tex}
+		\input{03_Systems_Engineering/03003_System_Assembly_And_Testing.tex}
+		\input{03_Systems_Engineering/03004_Project_Management.tex}
+		\input{03_Systems_Engineering/03005_Technical_Management.tex}
 		
 
 \end{document}
