--- a/03_Systems_Engineering/03003_System_Assembly_And_Testing.tex
+++ b/03_Systems_Engineering/03003_System_Assembly_And_Testing.tex
@@ -12,11 +12,6 @@
 % END HEADER
 
 \begin{document}
-	\subsection{System Requirements}
-	
-	
-	
-
-
-	
+	\subsection{System Assembly and Testing}
+	\label{subsec:system_assembly_and_testing}
 \end{document}
