--- a/2017-2018 SE Paper.tex
+++ b/2017-2018 SE Paper.tex
@@ -37,10 +37,9 @@
 	\input{03_Systems_Engineering/03000_Systems_Engineering.tex}
 	\pagebreak
 	
-	\input{06_Safety/06000_Safety.tex}
-	\pagebreak
+	\input{04_Conclusions/04000_Conclusions.tex}
 	
-	\input{07_Launch_Procedures/07000_Launch_Procedures.tex}
+	%\input{07_Launch_Procedures/07000_Launch_Procedures.tex}
 	\pagebreak
 
   \end{document}
