--- a/00_Preamble/frr_preamble.sty
+++ b/00_Preamble/frr_preamble.sty
@@ -2,7 +2,7 @@
 
 \usepackage[subpreambles=true]{standalone}
 \usepackage{indentfirst}
-\usepackage[letterpaper,margin=1in]{geometry}
+\usepackage[letterpaper,margin=0.5in,footskip=0.6cm]{geometry}
 \usepackage{graphics}
 \usepackage{graphicx}
 \usepackage{times}
@@ -92,7 +92,7 @@
 \renewcommand{\headrulewidth}{0pt} % no line in header area
 \renewcommand{\footrulewidth}{0.2pt}% default is 0pt
 \fancyfoot{} % clear all footer fields
-\fancyfoot[CE,CO]{\vspace*{-0.355em}{\normalfont\fontsize{10}{12}\bfseries{Vanderbilt University Robotics Club\enspace \textbar \enspace {\color{amber!60!black}2018 NASA RMC}\enspace \color{black}{\textbar} \enspace {\normalfont\fontsize{11}{12}\color{amber!60!black}{Systems Engineering}}}}}%\qquad \qquad \color{black}\thepage}}       % page number in "outer" position of footer line
+\fancyfoot[CE,CO]{\vspace*{-0.255em}{\normalfont\fontsize{10}{12}\bfseries{Vanderbilt University Robotics\enspace \textbar \enspace {\color{amber!60!black}2018 NASA RMC}\enspace \color{black}{\textbar} \enspace {\normalfont\fontsize{11}{12}\color{amber!60!black}{Systems Engineering}}}}}%\qquad \qquad \color{black}\thepage}}       % page number in "outer" position of footer line
 \fancyfoot[RE,RO]{\vspace*{-0.355em}{\colorbox{vgold}{\makebox[2em]{\bfseries{\color{white}\thepage}}}}}
 
 
