Remove 's' from 'Robotics'

--- a/00_Title_Page/00000_FRR_Title_Page.tex
+++ b/00_Title_Page/00000_FRR_Title_Page.tex
@@ -28,7 +28,7 @@
 \HRule\\ [1.0cm]
 
 \vspace*{0.1in}
-\huge\textsc{NASA Robotics Mining Competition}
+\huge\textsc{NASA Robotic Mining Competition}
 
 \vspace*{0.125in}
 
