--- a/03_Systems_Engineering/03001_Concept_Development.tex
+++ b/03_Systems_Engineering/03001_Concept_Development.tex
@@ -34,6 +34,8 @@ Optimizing gravel collection was the highest priority. The rover must excavate g
  		\hline
  		The robot shall weigh no more than 80 kg. \\ 
  		\hline
+ 		The robot must report the amount of energy it has consumed since its power-on. \\
+ 		\hline
  		\textbf{Performance} \\ 
  		\hline
  		The robot must be able to capable of collecting and depositing a minimum of 1 kg of icy simulant within 10 minutes. \\
@@ -60,13 +62,12 @@ Optimizing gravel collection was the highest priority. The rover must excavate g
  	\hline
  		\textbf{Functional} \\ 
  		\hline
- 		The robot must be capable of elevating the collected simulant a minimum of 3 inches above the collector bin. \\ 
+ 		The robot must be capable of elevating the collected simulant a minimum of 3 inches above the height of the collector bin. \\ 
  		\hline
  		\textbf{Performance} \\ 
  		\hline
  		The robot must be able to capable of collecting and depositing a minimum of 10 kg of icy simulant within 10 minutes. \\
  		\hline
-
  		\textbf{Budget} \\
  		\hline
 		The project cost for development of the robot shall cost no more than \$8000. \\
