Work on the Table in Preliminary Design

--- a/03_Systems_Engineering/03001_Concept_Development.tex
+++ b/03_Systems_Engineering/03001_Concept_Development.tex
@@ -9,6 +9,8 @@
 \usepackage{graphics}
 \usepackage{placeins}
 \usepackage{adjustbox}
+
+\renewcommand{\arraystretch}{1}
 % END HEADER
 
 \begin{document}
