--- a/04_Conclusions/04000_Conclusions.tex
+++ b/04_Conclusions/04000_Conclusions.tex
@@ -14,6 +14,6 @@
 
 \begin{document}
 	\section{Conclusions}
-		By applying the systems engineering process, Vanderbilt Robotics has developed a robotic excavation system to collect ivy gravel simulant in a Martian environment. With the experience and prototype developed this year, the team expects to continue to optimize the design of this robot to maximize other factors such as power and mass efficiency.
+		By applying the systems engineering process, Vanderbilt Robotics has developed a robotic excavation system to collect icy gravel simulant in a Martian environment. With the experience and prototype developed this year, the team expects to continue to optimize the design of this robot to maximize other factors such as power and mass efficiency.
 
 \end{document}
