--- a/03_Systems_Engineering/03001_Concept_Development.tex
+++ b/03_Systems_Engineering/03001_Concept_Development.tex
@@ -101,33 +101,29 @@ Optimizing gravel collection was the highest priority. The rover must excavate g
 	\FloatBarrier
 	\begin{table}[h]
 	\centering
-	\begin{tabular}{ | m{38em} | } 
+	\begin{tabular}{ | r | l |} 
  	\hline
- 		\textbf{Setup} \\ 
+ 		\textbf{Setup}                & 
+ 		                                Place robot at starting location and set up control station \\ 
  		\hline
- 		Place robot at starting location and set up control station \\ 
+ 		                              & Power on robot and establish network communication link \\
  		\hline
- 		Power on robot and establish network communication link \\ 
+ 		                              & Perform calibration for sensor and control systems on the robot \\
+ 		\hline\hline
+ 		\textbf{Competition Start}    & 
+ 		                                Autonomously scan environment to determine current pose \\
  		\hline
- 		Perform calibration for sensor and control systems on the robot \\
+ 		                              & Navigate to excavation zone while avoiding obstacles  \\
+ 		\hline\hline
+ 		\textbf{Excavation}           &
+		                                Mine gravel until section is depleted or storage limit is reached \\
+ 		\hline\hline
+ 		\textbf{Post-Competition Run} &
+ 		                                Record power consumption and turn off the robot \\
  		\hline
- 		\textbf{Competition Start} \\ 
+ 		                              & Clean the robot to remove particulate \\
  		\hline
- 		Autonomously scan environment to determine current pose \\
- 		\hline
- 		Navigate to excavation zone while avoiding obstacles  \\
- 		\hline
- 		\textbf{Excavation} \\
- 		\hline
-		Mine gravel until section is depleted or storage limit is reached \\
- 		\hline
- 		\textbf{Post-Competition Run} \\
- 		\hline
- 		Record power consumption and turn off the robot \\
- 		\hline
- 		Clean the robot to remove particulate \\
- 		\hline
- 		Verify system integrity qfor next round \\
+ 		                              & Verify system integrity for next round \\
  		\hline
 	\end{tabular}
 	\caption{Robot Concept of Operations}
@@ -136,7 +132,8 @@ Optimizing gravel collection was the highest priority. The rover must excavate g
 	\FloatBarrier
 	
 	\subsubsection{System Requirements Review}
-	On September 28, 2017, the executive team members met with the team’s faculty advisor and reviewed the system requirements in preparation for the preliminary design process. The system requirements were confirmed to align with the team’s design philosophy and the competition objectives...The system hierarchy was well modulated to allow for efficient task distribution and system integration. The team agreed that the concept of operations was the correct approach to satisfy both NASA’s requirements and the team-imposed autonomy and gravel collection requirements. The team received approval to proceed to the next design phase.
+	On October 15, 2017, the executive team members met with the team’s faculty advisor and reviewed the system requirements in preparation for the preliminary design process. The system requirements were confirmed to align with the team’s design philosophy and the competition objectives.The system hierarchy was well modulated to allow for efficient task distribution and system integration. The team agreed that the concept of operations was the correct approach to satisfy both NASA’s requirements and the team-imposed autonomy and gravel collection requirements. The team received approval to proceed to the next design phase.
+
 
 
 
