Added a magic table template!

--- a/03_Systems_Engineering/03001_Concept_Development.tex
+++ b/03_Systems_Engineering/03001_Concept_Development.tex
@@ -59,6 +59,7 @@ Optimizing gravel collection was the highest priority. The rover must excavate g
 	%VUR SYSTEM REQUIREMENTS
 	\FloatBarrier
 	\begin{table}[h]
+	\small
 	\centering
 	\begin{tabular}{ | m{38em} | } 
  	\hline
@@ -100,6 +101,7 @@ Optimizing gravel collection was the highest priority. The rover must excavate g
 	%Concept of Operations Table
 	\FloatBarrier
 	\begin{table}[h]
+	\small
 	\centering
 	\begin{tabular}{ | r | l |} 
  	\hline
